Add RPM packaging and workflow, update dependencies
- Add .github/workflow.yml for RPM build and release automation
- Add niriswitcher.spec for RPM packaging
- Add MIT LICENSE file
- Update README installation instructions and requirements
- Lower Python version requirement to >=3.10 and clear dependencies in pyproject.toml
- Fix shared library name in __init__.py for gtk4-layer-shell

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,8 @@ readme = "README.md"
 authors = [
     { name = "Isak Samsten", email = "isak@samsten.se" }
 ]
-requires-python = ">=3.13"
-dependencies = [
-    "pygobject>=3.52.3",
-]
+requires-python = ">=3.10"
+dependencies = []
 
 [project.scripts]
 niriswitcher = "niriswitcher:main"
