Update workflow to set permissions and fix RPM file paths
Add write permission for contents and correct RPM artifact paths to use
/github/home instead of /root. This ensures proper artifact upload and
aligns with GitHub Actions environment.

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,5 +1,7 @@
 name: Build RPM
 
+permissions:
+  contents: write
 on:
   release:
     types: [published]
@@ -33,5 +35,5 @@ jobs:
         if: github.event_name == 'release'
         with:
           files: |
-            /root/rpmbuild/RPMS/**/*.rpm
-            /root/rpmbuild/SRPMS/*.src.rpm
+            /github/home/rpmbuild/RPMS/**/*.rpm
+            /github/home/rpmbuild/SRPMS/*.src.rpm
