--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,8 +9,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        fedora_version: [39, 40, 41, 42]
     container:
-      image: fedora:39
+      image: fedora:${{ matrix.fedora_version }}
     steps:
       - name: Install dependencies
         run: |
