--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = []
 
 [project.scripts]
 niriswitcher = "niriswitcher:main"
+niriswitcherctl = "niriswitcher:main_ctl"
 
 [build-system]
 requires = ["hatchling"]
