--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "niriswitcher"
-version = "0.6.0"
-description = "Add your description here"
+version = "0.6.1"
+description = "An application switcher for Niri."
 readme = "README.md"
 authors = [
     { name = "Isak Samsten", email = "isak@samsten.se" }
